sample-app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress-2
  namespace: azure-vote
  annotations:
    kubernetes.io/ingress.class: nginx-phil1
    nginx.ingress.kubernetes.io/rewrite-target: /
    # Add any other annotations you need
spec:
  rules:
    - http:
        paths:
          - path: /test1
            pathType: Prefix
            backend:
              service:
                name: azure-vote-front
                port:
                  number: 80
